# mr_sip

./: DEEPGRAM_INTEGRATION.md  DEEPGRAM_REQUIRED.md  FLUX_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_CHECKLIST.md  README.md  README_V2.md  TODO.md  eager.md  eager.py  ex.py  fluxapi.md  plugin_info.json  pyproject.toml  requirements.txt  setup.py  test_flux.py
backup_src/mr_sip/: mod.py  sip_manager.py
config/: baresip_config_template  flux_stt_config.py
scripts/: install.sh  setup_jack.sh  test_jack.sh
src/mr_sip/: __init__.py  audio_combiner.py  audio_handler.py  audio_handler.py.backup  baresip_integration.py  commands.py  flux_deepgram_example.py  jack_streamer.py  mod.py  router.py  services.py  services_v2.py  services_v2.py.backup  sip_client.py  sip_client.py.backup  sip_client_v2.py  sip_client_v2.py.backup  sip_manager.py  snapshot_baresipy_config  start_jack_daemon.sh  whisper_vad.py  whisper_vad.py.backup
src/mr_sip/audio/: __init__.py  inotify_capture.py  jack_capture.py  jack_input_capture.py  sliding_window_agc.py
src/mr_sip/stt/: __init__.py  base_stt.py  deepgram_flux_stt.py  deepgram_stt.py  deepgram_stt.py.backup  stt_factory.py  whisper_vad_stt.py
src/mr_sip/templates/: calls.jinja2
tests/: test_core_components.py  test_integration.py  test_standalone.py
